[gd_scene load_steps=21 format=2]

[ext_resource path="res://characters/customers/base_customer/bumper.gd" type="Script" id=1]
[ext_resource path="res://models/ticket/ticket.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/base_character/base_character.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/customers/base_customer/customer.gd" type="Script" id=4]
[ext_resource path="res://characters/customers/base_customer/sprite.png" type="Texture" id=5]
[ext_resource path="res://characters/customers/effects/patience_change/exclamation mark.png" type="Texture" id=6]
[ext_resource path="res://characters/customers/effects/patience_change/patience_meter.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/laundry_holder/laundry_holder.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -19.2887, 15.9847 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_left"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.29681, 11.3091 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.180618, 22.2374 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18.3207, 4.10766 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "mov_down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -21.4293, 13.8577 ), Vector2( -18.1793, 16.6077 ), Vector2( -13.9293, 18.6077 ), Vector2( -18.179, 16.608 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "mov_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -7.92934, 12.3577 ), Vector2( 0.0706635, 14.1077 ), Vector2( 7.904, 11.441 ), Vector2( 0.571, 12.858 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "mov_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -10.1793, 19.1077 ), Vector2( -4.92934, 19.6077 ), Vector2( 1.57066, 19.7743 ), Vector2( -4.929, 19.608 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "mov_up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bumper/HandPos:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 20.0707, 9.10766 ), Vector2( 17.8207, 7.85766 ), Vector2( 15.5707, 6.85766 ), Vector2( 17.821, 7.858 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.0114943, 0.0011363 ), 0.0, 0.0, 0, 0, Vector2( 0.482759, 0.973864 ), 0.0, 0.0, 0, 0, Vector2( 0.988506, 0.0920454 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="CircleShape2D" id=12]
radius = 30.8545

[node name="Customer" groups=[
"customers",
] instance=ExtResource( 3 )]
position = Vector2( 0.146393, 0 )
z_index = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( -1.29517, 18.6274 )

[node name="Sprite" parent="." index="1"]
position = Vector2( -2, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 4

[node name="AnimationPlayer" parent="." index="2"]
anims/idle_down = SubResource( 1 )
anims/idle_left = SubResource( 2 )
anims/idle_right = SubResource( 3 )
anims/idle_up = SubResource( 4 )
anims/mov_down = SubResource( 5 )
anims/mov_left = SubResource( 6 )
anims/mov_right = SubResource( 7 )
anims/mov_up = SubResource( 8 )
anims/shake = SubResource( 9 )

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 10.0
one_shot = true

[node name="PatienceParticles" type="CPUParticles2D" parent="." index="4"]
position = Vector2( -0.209215, -51.3907 )
emitting = false
amount = 1
lifetime = 2.0
preprocess = 0.5
texture = ExtResource( 6 )
spread = 46.93
gravity = Vector2( 0, 0 )
scale_amount = 1.25
scale_amount_curve = SubResource( 10 )

[node name="AnimationTree" parent="." index="5"]
parameters/playback = SubResource( 11 )
parameters/Move/blend_position = Vector2( 0, 0.00948286 )

[node name="PatienceMeter" parent="." index="6" instance=ExtResource( 7 )]

[node name="Bumper" parent="." index="7" instance=ExtResource( 8 )]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumper" index="0"]
position = Vector2( -1.12375, 1.12373 )
shape = SubResource( 12 )

[node name="HandPos" type="Node2D" parent="Bumper" index="1"]
position = Vector2( -5.29681, 11.3091 )
z_index = -1

[node name="Ticket" parent="Bumper/HandPos" index="0" instance=ExtResource( 2 )]
position = Vector2( -19.0818, -9.54093 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="patience_exhausted" from="PatienceMeter" to="." method="_on_patience_exhausted"]
[connection signal="disallowed_customer_action" from="Bumper" to="." method="_on_Bumper_disallowed_customer_action"]
[connection signal="modulate" from="Bumper" to="." method="_on_Bumper_modulate"]
[connection signal="released" from="Bumper" to="." method="drop_off"]
[connection signal="returned" from="Bumper" to="." method="receive_order"]
